@@ -21,11 +21,13 @@
 #include <QtTest>
 #include <QObject>
 #include <time.h>
+#include <boost/scoped_array.hpp>
 #include <util/log.h>
 #include <utp/delaywindow.h>
 #include <util/functions.h>
 
 using namespace utp;
+using namespace bt;
 
 class DelayWindowTest : public QObject
 {
@@ -64,10 +66,36 @@ private slots:
 			QVERIFY(ret == base_delay);
 		}
 	}
-	
+#if 1
+	void testPerformance()
+	{
+		const int SAMPLE_COUNT = 2400000;
+		
+		boost::scoped_array<bt::Uint32> delay_samples(new bt::Uint32[SAMPLE_COUNT]);
+		for (int i = 0;i < SAMPLE_COUNT;i++)
+			delay_samples[i] = qrand() % 1000000;
+		
+		boost::scoped_array<bt::Uint32> returned_delay_new(new bt::Uint32[SAMPLE_COUNT]);
+		boost::scoped_array<bt::Uint32> returned_delay_old(new bt::Uint32[SAMPLE_COUNT]);
+		boost::scoped_array<bt::Uint32> returned_delay_circular(new bt::Uint32[SAMPLE_COUNT]);
+		
+		{
+			DelayWindow wnd;
+			bt::TimeStamp start = bt::Now();
+			for (int i = 0;i < SAMPLE_COUNT;i++)
+			{
+				Header hdr;
+				hdr.timestamp_difference_microseconds = delay_samples[i];
+				returned_delay_new[i] = wnd.update(&hdr,i);
+			}
+			bt::TimeStamp duration = bt::Now() - start;
+			Out(SYS_GEN|LOG_DEBUG) << "New algorithm took: " << duration << endl;
+		}
+	}
+#endif
+
 	void testTimeout()
 	{
-		bt::Uint32 base_delay = MAX_DELAY;
 		DelayWindow wnd;
 		
 		Header hdr;
